lectures.en/_build/html/reports/inflation_history_cn.err.log
Traceback (most recent call last):
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/home/humphrey/anaconda3/envs/quantecon/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
def process_entry(entry):
    "æ¸…ç†æ•°æ®æ¡†ä¸­çš„æ¯ä¸ªæ¡ç›®ã€‚"
    
    if type(entry) == str:
        # å»æ‰å‰åç©ºæ ¼
        entry = entry.strip()
        # å»æ‰é€—å·
        entry = entry.replace(',', '')
    
        # å»æ‰ HTML æ ‡è®°
        item_to_remove = ['<s>a</s>', '<s>c</s>', 
                          '<s>d</s>', '<s>e</s>']

        # <s>b</s> è¡¨ç¤ºåäº¿
        if '<s>b</s>' åœ¨ entry ä¸­:
            entry = entry.replace('<s>b</s>', '')
            entry = float(entry) * 1e9
        else:
            for item in item_to_remove:
                if item åœ¨ entry ä¸­:
                    entry = entry.replace(item, '')
    return entry

def process_df(df):
    "æ¸…ç†å¹¶é‡ç»„æ•´ä¸ªæ•°æ®æ¡†ã€‚"
    
    # å»æ‰åˆ—åä¸­çš„ HTML æ ‡è®°
    for item in ['<s>a</s>', '<s>c</s>', '<s>d</s>', '<s>e</s>']:
        df.columns = df.columns.str.replace(item, '')
        
    # å°†å¹´ä»½è½¬æ¢ä¸ºæ•´æ•°
    df['Year'] = df['Year'].apply(lambda x: int(x))
    
    # è®¾ç½®ç´¢å¼•ä¸ºå¹´ä»½å’Œæœˆä»½çš„æ—¥æœŸæ—¶é—´æ ¼å¼
    df = df.set_index(
            pd.to_datetime(
                (df['Year'].astype(str) + \
                 df['Month'].astype(str)), 
                format='%Y%B'))
    df = df.drop(['Year', 'Month'], axis=1)
    
    # å¤„ç†é‡å¤æ¡ç›®ï¼Œä¿ç•™ç¬¬ä¸€ä¸ª
    df = df[~df.index.duplicated(keep='first')]
    
    # å°†å±æ€§å€¼è½¬æ¢ä¸ºæ•°å€¼
    df = df.applymap(lambda x: float(x) \
                if x != 'â€”' else np.nan)
    
    # æœ€åï¼Œæˆ‘ä»¬åªå…³æ³¨1919å¹´è‡³1925å¹´ä¹‹é—´çš„æ•°æ®
    mask = (df.index >= '1919-01-01') & \
           (df.index < '1925-01-01')
    df = df.loc[mask]

    return df
------------------

[0;36m  Cell [0;32mIn[5], line 15[0;36m[0m
[0;31m    if '<s>b</s>' åœ¨ entry ä¸­:[0m
[0m                  ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (592272705.py, line 15)

